--- a/make_example.env
+++ b/make_example.env
@@ -2,3 +2,9 @@ NODE_ENV=development
 PORT=5000
 CLIENT_URL=http://localhost:3000
 DATABASE_URL='ADD DATABASE URL HERE'
+SENDGRID_API_KEY='ADD SENDGRID API KEY HERE'
+JWT_SECRET='ADD JWT SECRET HERE'
+JWT_ACCOUNT_ACTIVATION='ADD JWT ACCOUNT ACTIVATION HERE'
+EMAIL_TO='ADD EMAIL TO HERE'
+EMAIL_FROM='ADD EMAIL FROM HERE'
+JWT_RESET_PASSWORD='ADD JWT RESET PASSWORD HERE'
